Fix background color for button styles in main.css and rmtseminar.css, and remove unnecessary vertical alignment property for improved layout consistency.

--- a/assets/css/rmtseminar.css
+++ b/assets/css/rmtseminar.css
@@ -1962,7 +1962,7 @@
 	input[type="button"],
 	button,
 	.button {
-		background-color: ;
+		background-color: #000;
 		color: #fff !important;
 	}
 
@@ -3638,7 +3638,6 @@
 			right: 0;
 			text-align: right;
 			top: 0;
-			vertical-align: middle;
 			width: 7em;
 		}
 
